# 1-bit-llm-patch-test

./: .gitignore  README.md  TEAM_RUNBOOK.md  WHITEPAPER.md  pyproject.toml
configs/: bfcl.yaml  gsm8k.yaml  humaneval_plus.yaml  ifeval.yaml
data/bfcl/: normalized.jsonl
data/gsm8k/: eval_items.jsonl
data/gsm8k/raw/: dataset.json  (+1 more)
data/ifeval/: normalized.jsonl
patches/: bfcl_patch.json  gsm8k_patch.json  gsm8k_real_patch.json  gsm8k_real_patch_anneal_s4_pool4_topk1.json  gsm8k_real_patch_anneal_smoke.json  gsm8k_real_patch_anneal_stable_weighted_s4_pool4_topk1.json  gsm8k_real_patch_anneal_stable_weighted_smoke.json  gsm8k_real_patch_curated_data_v2_pool32_topk2_t6_c3_r3.json  gsm8k_real_patch_curated_data_v2_pool8_topk2_t6_c3.json  gsm8k_real_patch_curated_data_v2_smoke_t2_c1.json  gsm8k_real_patch_curated_pool32_topk6.json  humaneval_plus_patch.json  ifeval_patch.json
probes/bfcl/: probes.jsonl
probes/ifeval/: probes.jsonl
results/: benchmark_matrix.csv  bfcl_search.json  doctor.json  gsm8k_real_compare_details.json  gsm8k_real_compare_summary.json  gsm8k_real_search.json  gsm8k_search.json  gsm8k_two_patch_compare_chat_400_details.json  gsm8k_two_patch_compare_chat_400_summary.json  gsm8k_two_patch_compare_chat_details.json  gsm8k_two_patch_compare_chat_summary.json  gsm8k_two_patch_compare_details.json  gsm8k_two_patch_compare_summary.json  humaneval_plus_search.json  ifeval_search.json  model_inspect.json  routing_metrics.csv  routing_metrics.json  storage_metrics.json
src/bankai_poc/: __init__.py  cli.py  plotting.py
tests/: test_patching.py
(+22 files in other folders)
